# Hospital_Management

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  MakefileforMacOS.txt  README.md  docker-compose.yml  run.sh
common/: CMakeLists.txt
common/clients/: PatientManagementClient.cpp  PatientManagementClient.hpp  ResourceManagementClient.cpp  ResourceManagementClient.hpp  RoomManagementClient.cpp  RoomManagementClient.hpp  StaffManagementClient.cpp  StaffManagementClient.hpp  patient_client.py  resource_client.py  room_client.py  staff_client.py
common/include/: Client.hpp  JSONParser.hpp  PatientManagementClient.hpp  ResourceManagementClient.hpp  RoomManagementClient.hpp  Schedule.hpp  Service.hpp  grpc_utils.hpp  time_utils.hpp  utils.hpp
common/proto/: Common.proto  PatientManagement.proto  ResourceManagement.proto  RoomManagement.proto  StaffManagement.proto  common.proto
common/src/: PatientManagementClient.cpp  ResourceManagementClient.cpp  RoomManagementClient.cpp  Schedule.cpp  Service.cpp  time_utils.cpp
services/FrontEnd/: CMakeLists.txt
services/FrontEnd/src/: FrontEndService.cpp  FrontEndService.hpp  main.cpp
services/FrontEnd_CLI/: CMakeLists.txt  Dockerfile
services/FrontEnd_CLI/src/: FrontEndService.cpp  FrontEndService.hpp  cli_input.hpp  main.cpp  patient_fe.cpp  patient_fe.hpp  resource_fe.cpp  resource_fe.hpp  room_fe.cpp  room_fe.hpp  staff_fe.cpp  staff_fe.hpp
services/FrontEnd_GUI/: CMakeLists.txt  Dockerfile  api_translator.py  index.html  main.cpp
services/PatientManagement/: CMakeLists.txt  Dockerfile
services/PatientManagement/database/: patient_database.json
services/PatientManagement/src/: Patient.cpp  Patient.hpp  PatientJSONParser.hpp  PatientManagementService.cpp  PatientManagementService.hpp  main.cpp
services/ResourceManagement/: CMakeLists.txt  Dockerfile
services/ResourceManagement/database/: resource_database.json
services/ResourceManagement/src/: Resource.cpp  Resource.hpp  ResourceJSONParser.hpp  ResourceManagementService.cpp  ResourceManagementService.hpp  main.cpp
services/RoomManagement/: CMakeLists.txt  Dockerfile
services/RoomManagement/database/: room_database.json
services/RoomManagement/src/: Room.cpp  Room.hpp  RoomJSONParser.hpp  RoomManagementService.cpp  RoomManagementService.hpp  main.cpp
services/Scheduler/: CMakeLists.txt  Dockerfile
services/Scheduler/src/: Scheduler.cpp  Scheduler.hpp  main.cpp
services/StaffManagement/: CMakeLists.txt  Dockerfile
services/StaffManagement/database/: staff_database.json
services/StaffManagement/src/: Staff.cpp  Staff.hpp  StaffJSONParser.hpp  StaffManagementService.cpp  StaffManagementService.hpp  main.cpp
xcode-build/: CMakeCache.txt  cmake_install 2.cmake  cmake_install.cmake
xcode-build/CMakeScripts/: ReRunCMake.make
xcode-build/Hospital_Management 2.xcodeproj/: project.pbxproj
xcode-build/Hospital_Management 2.xcodeproj/project.xcworkspace/xcuserdata/matthewhvizdos.xcuserdatad/: UserInterfaceState.xcuserstate
xcode-build/Hospital_Management 2.xcodeproj/xcuserdata/matthewhvizdos.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
xcode-build/Hospital_Management.xcodeproj/: project.pbxproj
xcode-build/Hospital_Management.xcodeproj/project.xcworkspace/xcuserdata/matthewhvizdos.xcuserdatad/: UserInterfaceState.xcuserstate
xcode-build/Hospital_Management.xcodeproj/xcuserdata/matthewhvizdos.xcuserdatad/xcschemes/: xcschememanagement.plist
xcode-build/common/: cmake_install.cmake
xcode-build/generated_python/: Common_pb2.py  PatientManagement_pb2.py  PatientManagement_pb2_grpc.py  ResourceManagement_pb2.py  ResourceManagement_pb2_grpc.py  RoomManagement_pb2.py  RoomManagement_pb2_grpc.py
xcode-build/services/FrontEnd/: cmake_install.cmake
xcode-build/services/FrontEnd_CLI/: cmake_install.cmake
xcode-build/services/FrontEnd_GUI/: cmake_install.cmake
xcode-build/services/PatientManagement/: cmake_install.cmake
xcode-build/services/ResourceManagement/: cmake_install.cmake
xcode-build/services/RoomManagement/: cmake_install.cmake
xcode-build/services/Scheduler/: cmake_install.cmake
xcode-build/services/StaffManagement/: cmake_install.cmake
